--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.22.2
 torch==1.10.1
-sklearn==0.0
 pandas==1.3.5
 matplotlib==3.5.1
 sympy==1.9
 tqdm==4.62.3
+scikit-learn
 
-
+https://pypi.tuna.tsinghua.edu.cn/simple
